<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="StateTimeStamp" Id="{37043554-7926-468f-9b0e-2a2649e50372}">
    <Declaration><![CDATA[TYPE StateTimeStamp :
STRUCT
	Station		: DINT;	
	ID			: DINT;
	State		: DINT;
	DateTime	: TIMESTRUCT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>